Updated navbar styles

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,7 +23,6 @@ h1, h2, h3 {
   font-family: 'Open Sans', sans-serif;
 }
 
-
 .navbar, .home-callout {
   //Gradient provided by https://twitter.com/_ighosh at uiGradients.com
   background: #06beb6;  /* fallback for old browsers */
@@ -33,6 +32,24 @@ h1, h2, h3 {
 
 .navbar {
   border: none; 
+}
+
+.navbar-default .navbar-brand {
+  color: white; 
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: white;
+}
+
+.navbar-default .navbar-brand:hover {
+  color: white; 
+  opacity: 0.75;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+  color: white;
+  opacity: 0.75;
 }
 
 .home-callout {
