--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,11 +18,12 @@
 @import 'bootstrap';
 
 
-
+//Typography styles
 h1, h2, h3 {
   font-family: 'Open Sans', sans-serif;
 }
 
+//Background gradient
 .navbar, .home-callout {
   //Gradient provided by https://twitter.com/_ighosh at uiGradients.com
   background: #06beb6;  /* fallback for old browsers */
@@ -30,28 +31,23 @@ h1, h2, h3 {
   background: linear-gradient(to right, #48b1bf, #06beb6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+//Nav styles
 .navbar {
   border: none; 
 }
 
-.navbar-default .navbar-brand {
-  color: white; 
-}
 
-.navbar-default .navbar-nav > li > a {
+.navbar-default .navbar-brand, 
+.navbar-default .navbar-nav > li > a  {
   color: white;
+  &:hover {
+    color: white;
+    opacity: 0.75;
+  }
 }
 
-.navbar-default .navbar-brand:hover {
-  color: white; 
-  opacity: 0.75;
-}
 
-.navbar-default .navbar-nav > li > a:hover {
-  color: white;
-  opacity: 0.75;
-}
-
+// Home page styles
 .home-callout {
   color: white;
   margin-top: -20px;
